[package]
name = "spacetraders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
serde = "1.0.160"
serde_json = "1.0.96"
json = "0.12.4"
chrono = "0.4.24"

[profile.release]
strip = true 
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"